--- a/resources/css/mainAdmin.css
+++ b/resources/css/mainAdmin.css
@@ -259,28 +259,23 @@
     }
 }
 
-.btn.departmentNavbar_dropdown {
+/* .btn.departmentNavbar_dropdown {
     display: none;
-    /* position: fixed; */
 }
 
 @media screen and (max-width: 500px) {
     .btn.departmentNavbar_dropdown {
         font-size: 11px;
         font-weight: normal;
-        /* padding-right: 1%;  */
         left: 42%;
         margin-top: 12px;
         display:flex;
         box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
         position: absolute;
         height: 30px;
-        /* width: 90px; */
         padding-top: 15px;
         text-align: right;
-        /* justify-content: space-around; */
-        /* text-align: left; */
-        /* padding-left: 0%; */
+
     }
 
 }
@@ -288,9 +283,8 @@
 @media screen and (max-width: 380px) {
     .btn.departmentNavbar_dropdown {
         left: 37%;
-        /* width: 80px; */
     }
-}
+} */
 /* @media screen and (max-width: 300px) {
     .btn.departmentNavbar_dropdown {
       padding-right: 1%;
