--- a/resources/css/managedrpart.css
+++ b/resources/css/managedrpart.css
@@ -788,3 +788,177 @@
               font-size: 10px;
             }
         } */
+        .table.details-academic{
+            text-align: right;
+            font-size: 12px;
+        }
+        .table.details-academic-complete{
+            /* text-align: right; */
+            font-size: 12px;
+        }
+        .table.addacademic{
+            text-align: right;
+            font-size: 12px;
+        }
+        .table.ModalEditeacademic{
+            text-align: right;
+            font-size: 12px;
+        }
+
+        .modal-content.addacademic
+        {
+            /* height: 700px; */
+            overflow: auto;
+            border-top-left-radius: 35px;
+            border-top-right-radius: 35px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+        .modal-content.ModalEditeacademic
+        {
+            /* height: 700px; */
+            overflow: auto;
+            border-top-left-radius: 35px;
+            border-top-right-radius: 35px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+        .modal-content.ModaldDetailsAcademic
+        {
+            /* height: 700px; */
+            overflow: auto;
+            border-top-left-radius: 35px;
+            border-top-right-radius: 35px;
+            border-bottom-left-radius: 25px;
+            border-bottom-right-radius: 25px;
+        }
+        .modal-header.addacademic{
+            background-color:#1558DB;
+            color: white;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            text-align: center;
+        }
+        .modal-header.ModalEditeacademic{
+            background-color:#1558DB;
+            color: white;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            text-align: center;
+        }
+        .modal-header.ModaldDetailsAcademic{
+            background-color:#1558DB;
+            color: white;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            text-align: center;
+        }
+        .modal-body.ModaldDetailsAcademic{
+            /* height: 600px; */
+            overflow: auto;
+        }
+        .modal-footer.ModaldDetailsAcademic{
+            height: 30px;
+            overflow: auto;
+            background-color:#1558DB;
+            border-bottom-left-radius: 25px;
+            border-bottom-right-radius: 25px;
+
+        }
+
+        /* @media screen and (max-width: 992px) {
+            .modal-content.ModaldDetailsAcademic
+            {
+                min-height:00px;
+            }
+        } */
+        .btn.departmentNavbar_dropdown {
+            display: none;
+        }
+
+        @media screen and (max-width: 500px) {
+            .btn.departmentNavbar_dropdown {
+                font-size: 11px;
+                font-weight: normal;
+                left: 42%;
+                margin-top: 12px;
+                display:flex;
+                box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+                position: absolute;
+                height: 30px;
+                padding-top: 15px;
+                text-align: right;
+
+            }
+
+        }
+
+        @media screen and (max-width: 450px) {
+            .btn.departmentNavbar_dropdown {
+                left: 54%;
+            }
+        }
+        @media screen and (max-width: 350px) {
+            .btn.departmentNavbar_dropdown {
+                font-size: 10px;
+            }
+        }
+        .btn.departmentTypeAcademic_dropdown{
+            font-size: 13px;
+                font-weight: normal;
+                left: 65%;
+                margin-top: 55px;
+                display:flex;
+                box-shadow: 0px 0px 2px 0px rgb(72, 72, 72);
+                position: absolute;
+                height: 30px;
+                padding-top: 15px;
+                text-align: right;
+        }
+        @media screen and (max-width: 950px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 62.5%;
+            }
+        }
+        @media screen and (max-width: 880px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 60%;
+            }
+        }
+        @media screen and (max-width: 780px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 59%;
+            }
+        }
+        @media screen and (max-width: 741px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 55%;
+            }
+        }
+        @media screen and (max-width: 700px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 75%;
+            }
+        }
+        @media screen and (max-width: 600px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 71%;
+            }
+        }
+        @media screen and (max-width: 600px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 72%;
+            }
+        }
+        @media screen and (max-width: 450px) {
+            .btn.departmentTypeAcademic_dropdown{
+                left: 30%;
+                font-size: 11px;
+                margin-top: 12px;
+            }
+        }
+        @media screen and (max-width: 350px) {
+            .btn.departmentTypeAcademic_dropdown{
+                font-size: 10px;
+            }
+        }
